fix for the overflow issue + autoscroll in the DAW based on where the clip is

--- a/css/earsketch/styles.less
+++ b/css/earsketch/styles.less
@@ -2,6 +2,7 @@
 
 html, body {
   height: 100vh;
+  overflow: hidden;
   padding: 0;
   margin: 0;
   font-family: @font;
